; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_snd_dma.c_S_StartLocalSound.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_snd_dma.c_S_StartLocalSound.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_soundStarted = common dso_local global i32 0, align 4
@s_soundMuted = common dso_local global i64 0, align 8
@s_numSfx = common dso_local global i64 0, align 8
@S_COLOR_YELLOW = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [43 x i8] c"S_StartLocalSound: handle %i out of range\0A\00", align 1
@listener_number = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @S_StartLocalSound(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* @s_soundStarted, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %2
  %8 = load i64, i64* @s_soundMuted, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %2
  br label %27

11:                                               ; preds = %7
  %12 = load i64, i64* %3, align 8
  %13 = icmp slt i64 %12, 0
  br i1 %13, label %18, label %14

14:                                               ; preds = %11
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @s_numSfx, align 8
  %17 = icmp sge i64 %15, %16
  br i1 %17, label %18, label %22

18:                                               ; preds = %14, %11
  %19 = load i32, i32* @S_COLOR_YELLOW, align 4
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @Com_Printf(i32 %19, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i64 %20)
  br label %27

22:                                               ; preds = %14
  %23 = load i32, i32* @listener_number, align 4
  %24 = load i32, i32* %4, align 4
  %25 = load i64, i64* %3, align 8
  %26 = call i32 @S_StartSound(i32* null, i32 %23, i32 %24, i64 %25)
  br label %27

27:                                               ; preds = %22, %18, %10
  ret void
}

declare dso_local i32 @Com_Printf(i32, i8*, i64) #1

declare dso_local i32 @S_StartSound(i32*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
